Fix calc dimensions. Add ⌫ btn. Center btn text.
Ensured the calculator body is taller than it is wide!

Added a backspace button to avoid lengthy re-entries

Moved () button to advanced keys and allowed 0 button
to absorb extra space on row 5.

Added flex to buttons to keep text centered.

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Bitter-Var, Roboto-reg, "Courier New", 'Courier New', Courier, monospace;
+  font-family: Bitter-Var, Roboto-reg, "Courier New", "Courier New", Courier, monospace;
 }
 
 body {
@@ -17,8 +17,8 @@ h1,
 }
 
 .calc-body {
-  height: 50vh;
-  width: 70vw;
+  height: 80vh;
+  width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -49,6 +49,12 @@ h1,
   row-gap: 3%;
 }
 
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .advanced-btns-container {
   width: 100%;
   height: 10%;
@@ -61,12 +67,6 @@ h1,
   width: 100%;
   height: 90%;
   display: flex;
-  justify-content: space-evenly; /* Remove */
-}
-
-.main-numpad button {
-  width: 100%;
-  height: 100%;
 }
 
 .digit-btns-container {
